[package]
name = "mhdb"
version = "1.0.0"
authors = ["mhmorgan <mhmorgan42@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crates.io/crates/mhdb"
repository = "https://github.com/mhmorgan/mhdb"
readme = "README.md"

[lib]
name = "mhdb"

[features]
default = ["std"]
std = ["serde", "bincode"]

[dependencies]
serde = { version = "1.0.111", optional = true }
bincode = { version =  "1.2.1", optional = true }