[package]
name = "mhdb"
version = "1.0.3"
authors = ["mhmorgan <mhmorgan42@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crates.io/crates/mhdb"
repository = "https://github.com/mhmorgan/mhdb"
readme = "README.md"
description = "Pure rust embeddable key-value store database."
documentation = "https://docs.rs/mhdb/"

keywords = ["database", "embedded", "simple"]
categories = ["database-implementations"]

[lib]
name = "mhdb"

[features]
default = ["std"]
std = ["serde", "bincode"]

[dependencies]
serde = { version = "1.0.111", optional = true }
bincode = { version =  "1.2.1", optional = true }
